...
    
    //MARK: - Methods
    @objc func searchTapped() {
        let alert = UIAlertController(title: "Filter...", message: nil, preferredStyle: .alert)
        alert.addTextField()
        
        alert.addAction(UIAlertAction(title: "Filter", style: .default, handler: { [unowned self] (_) in
            let userInput = alert.textFields?[0].text ?? ""
            
            if userInput == "" {
                self.playData.applyUserFilter("swift")
            } else {
                self.playData.applyUserFilter(userInput)
            }
            
            self.tableView.reloadData()
        }))
        
        //alert.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: { [unowned self] (_) in
            self.playData.applyUserFilter("swift")
            self.tableView.reloadData()
        }))
        
        present(alert, animated: true)
...
